Spacing Issue

--- a/css/references.css
+++ b/css/references.css
@@ -45,7 +45,7 @@
 .img3 {
   background-repeat: no-repeat;
   position: absolute;
-  top: 850px;
+  top: 775px;
   opacity: 0.6;
   width: 100%;
   height: 300px;
